# TikiTok

./: .gitignore  README.md  docker-compose.yaml  docker.env.template  nginx.conf
context_mixer/: .env  Cargo.toml  Dockerfile
context_mixer/src/: lib.rs  main.rs
context_mixer/src/auth/: keys.json  mod.rs
context_mixer/src/server/: mod.rs
context_mixer/src/video/: mod.rs
database/: init.sql
frontent/: .gitignore  package-lock.json  package.json
frontent/components/: Loading.tsx  Navbar.tsx
frontent/config/: firebase.ts
frontent/context/: AuthContext.tsx
frontent/pages/: dashboard.tsx  index.tsx  inputFile.tsx  login.tsx  signup.tsx
frontent/pages/videos/: [id].tsx  videosBatch.tsx
frontent/styles/: Dashboard.module.css  Navbar.module.css  Video.module.css
like_handler/: Dockerfile  requirements.txt
like_handler/src/: db.py  main.py
local_tests/: .env.local  jnp-login-firebase-adminsdk-vrud3-1789c6dc0c.json  test.py
ml_classifier/: .dockerignore  .gitignore  Dockerfile  model.txt  requirements.txt
ml_classifier/src/: bunny_cdn.py  main.py  movi_hmdb_off.py  test.py  video_processor.py
ml_classifier/src/movinets/: README.txt  models.py
video_uploader/: .gitignore  Dockerfile  README.md  db.py  main.py  requirements.txt
video_uploader/src/: bunny_cdn.py  job_queue.py  main.py
