[package]
name = "context_mixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers", "default"] }
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pem = "0.8"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = ["serde"] }
tower-http = { version = "0.3.5", features = ["cors"] }
